[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marimo-simple-ui"
version = "0.1.0"
description = "Simple Marimo UI that sends user prompt to generate_full_objective endpoint."
authors = [
  { name = "Enrique De Alba", email = "enrique.dealba@e-o.solutions" }
]
dependencies = [
  "marimo==0.11.0",
  "requests"
]

[tool.hatch.build.targets.wheel]
include = ["main.py"]
